// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL API returns movies by ID 1`] = `
Object {
  "data": Object {
    "movie": Object {
      "id": "11",
      "overview": "Princess Leia is captured and held hostage by the evil Imperial forces in their effort to take over the galactic Empire. Venturesome Luke Skywalker and dashing captain Han Solo team together with the loveable robot duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and justice in the Empire.",
      "title": "Star Wars",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API returns movies by search query 1`] = `
Object {
  "data": Object {
    "search": Array [
      Object {
        "id": "163",
        "overview": "Danny Ocean reunites with his old flame and the rest of his merry band of thieves in carrying out three huge heists in Rome, Paris and Amsterdam – but a Europol agent is hot on their heels.",
        "title": "Ocean's Twelve",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`GraphQL API returns popular movies 1`] = `
Object {
  "data": Object {
    "popular": Array [
      Object {
        "id": "419704",
        "overview": "The near future, a time when both hope and hardships drive humanity to look to the stars and beyond. While a mysterious phenomenon menaces to destroy life on planet Earth, astronaut Roy McBride undertakes a mission across the immensity of space and its many perils to uncover the truth about a lost expedition that decades before boldly faced emptiness and silence in search of the unknown.",
        "title": "Ad Astra",
      },
      Object {
        "id": "531454",
        "overview": "When aspiring musicians Lars and Sigrit are given the opportunity of a lifetime to represent their country at the world's biggest song competition, they finally have a chance to prove that any dream is a dream worth fighting for.",
        "title": "Eurovision Song Contest: The Story of Fire Saga",
      },
      Object {
        "id": "619592",
        "overview": "A gang of thieves plan a heist during a hurricane and encounter trouble when a disgraced cop tries to force everyone in the building to evacuate.",
        "title": "Force of Nature",
      },
      Object {
        "id": "475430",
        "overview": "Artemis Fowl is a 12-year-old genius and descendant of a long line of criminal masterminds. He soon finds himself in an epic battle against a race of powerful underground fairies who may be behind his father's disappearance.",
        "title": "Artemis Fowl",
      },
      Object {
        "id": "181812",
        "overview": "The surviving Resistance faces the First Order once again as the journey of Rey, Finn and Poe Dameron continues. With the power and knowledge of generations behind them, the final battle begins.",
        "title": "Star Wars: The Rise of Skywalker",
      },
      Object {
        "id": "454626",
        "overview": "Based on the global blockbuster videogame franchise from Sega, Sonic the Hedgehog tells the story of the world’s speediest hedgehog as he embraces his new home on Earth. In this live-action adventure comedy, Sonic and his new best friend team up to defend the planet from the evil genius Dr. Robotnik and his plans for world domination.",
        "title": "Sonic the Hedgehog",
      },
      Object {
        "id": "496243",
        "overview": "All unemployed, Ki-taek's family takes peculiar interest in the wealthy and glamorous Parks for their livelihood until they get entangled in an unexpected incident.",
        "title": "Parasite",
      },
      Object {
        "id": "475557",
        "overview": "During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure.",
        "title": "Joker",
      },
      Object {
        "id": "299536",
        "overview": "As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.",
        "title": "Avengers: Infinity War",
      },
      Object {
        "id": "11",
        "overview": "Princess Leia is captured and held hostage by the evil Imperial forces in their effort to take over the galactic Empire. Venturesome Luke Skywalker and dashing captain Han Solo team together with the loveable robot duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and justice in the Empire.",
        "title": "Star Wars",
      },
      Object {
        "id": "495764",
        "overview": "Harley Quinn joins forces with a singer, an assassin and a police detective to help a young girl who had a hit placed on her after she stole a rare diamond from a crime lord.",
        "title": "Birds of Prey (and the Fantabulous Emancipation of One Harley Quinn)",
      },
      Object {
        "id": "254904",
        "overview": "An ex- CIA operative is brought back in on a very personal mission and finds himself pitted against his former pupil in a deadly game involving high level CIA officials and the Russian president-elect.",
        "title": "The November Man",
      },
      Object {
        "id": "157336",
        "overview": "The adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage.",
        "title": "Interstellar",
      },
      Object {
        "id": "595148",
        "overview": "A Democratic political consultant helps a retired Marine colonel run for mayor in a small, conservative Wisconsin town.",
        "title": "Irresistible",
      },
      Object {
        "id": "420817",
        "overview": "A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.",
        "title": "Aladdin",
      },
      Object {
        "id": "570670",
        "overview": "When Cecilia's abusive ex takes his own life and leaves her his fortune, she suspects his death was a hoax. As a series of coincidences turn lethal, Cecilia works to prove that she is being hunted by someone nobody can see.",
        "title": "The Invisible Man",
      },
      Object {
        "id": "671",
        "overview": "Harry Potter has lived under the stairs at his aunt and uncle's house his whole life. But on his 11th birthday, he learns he's a powerful wizard -- with a place waiting for him at the Hogwarts School of Witchcraft and Wizardry. As he learns to harness his newfound powers with the help of the school's kindly headmaster, Harry uncovers the truth about his parents' deaths -- and about the villain who's to blame.",
        "title": "Harry Potter and the Philosopher's Stone",
      },
      Object {
        "id": "530915",
        "overview": "At the height of the First World War, two young British soldiers must cross enemy territory and deliver a message that will stop a deadly attack on hundreds of soldiers.",
        "title": "1917",
      },
      Object {
        "id": "27205",
        "overview": "Cobb, a skilled thief who commits corporate espionage by infiltrating the subconscious of his targets is offered a chance to regain his old life as payment for a task considered to be impossible: \\"inception\\", the implantation of another person's idea into a target's subconscious.",
        "title": "Inception",
      },
      Object {
        "id": "330457",
        "overview": "Elsa, Anna, Kristoff and Olaf head far into the forest to learn the truth about an ancient mystery of their kingdom.",
        "title": "Frozen II",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
